core/ingress/administration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: administration-ingress
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/configuration-snippet: |
    add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
#   nginx.ingress.kubernetes.io/whitelist-source-range: "146.124.141.59/32, 146.124.141.60/32"
#   ingress.kubernetes.io/secure-backends: "false"
spec:
 tls:
 - hosts:
   # fully-qualified domain name of the BAI admin REST service
   - symbiote-core.iotfeds.intracom-telecom.com
   secretName: wildcard-ingress-tls
 rules:
 - host: symbiote-core.iotfeds.intracom-telecom.com
   http:
     paths:
     - path: /administration
       pathType: Prefix
       backend:
         service:
           name: symbiote-admin
           port:
             number: 8250
