core/ingress/rabittmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: symbiote-core
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - rabittmq.iotfeds.intracom-telecom.com
      secretName: wildcard-ingress-tls
  rules:
    - host: rabittmq.iotfeds.intracom-telecom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: symbiote-rabbitmq
                port:
                  number: 15672
